finitions sur planning, événements et réalisations

--- a/archives-Paques.html
+++ b/archives-Paques.html
@@ -15,7 +15,7 @@
     <header>
         <div class="logo"><a href="index.html"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></a></div>
 
-        <div class="title">Pâques</div>
+        <div class="title">Archives 2022</div>
 
         <nav class="nav_main">
             <div class="btn_nav">
@@ -54,7 +54,7 @@
         
 
         <div class="title1">
-            <h1>Réalisations de Pâques</h1>
+            <h1>Atelier de Pâques</h1>
         </div>
 
         <!-------------------------- First section ----------------------------->
