--- a/planning.html
+++ b/planning.html
@@ -135,23 +135,23 @@
                 <Legend>Formulaire d'inscription</Legend>
                 <form action="#">
 
-                    <div><label for="nom">Nom : </label><input name="nom" id="nom" type="text">
+                    <div class="form_ln" ><label for="nom">Nom : </label><input name="nom" id="nom" type="text">
                     </div>
                     <br>
 
-                    <div> <label for="Prenom">Prénom : </label><input name="prenom" id="prenom" type="text">
+                    <div class="form_ln"> <label for="Prenom">Prénom : </label><input name="prenom" id="prenom" type="text">
                     </div>
                     <br>
 
-                    <div><Label for="email">E-mail : </Label><input name="email" id="email" type="email">
+                    <div class="form_ln"><Label for="email">E-mail : </Label><input name="email" id="email" type="email">
                     </div>
                     <br>
 
-                    <div><label for="tel">Téléphone : </label> <input name="tel" id="tel" type="tel">
+                    <div class="form_ln"><label for="tel">Téléphone : </label> <input name="tel" id="tel" type="tel">
                     </div>
                     <br>
 
-                    <input class="form_btn" type="submit" value="Submit">
+                    <input class="form_btn" type="submit" value="Inscription">
                 </form>
 
             </div>
