--- a/realisations.html
+++ b/realisations.html
@@ -122,7 +122,7 @@
 
             </div>
             <!-- ************************************CARTE DECO DE PAQUES************************* -->
-            <div class="card couture fond_bleu">
+            <div class="card crochet fond_bleu">
                 <h2 class="titre_card">Décorations de Pâques</h2>
                 <div class="container">
                     <a href="archives-Paques.html"><div>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="card_footer">
                     <div class="tags">
-                        <button class="tag_1">Couture</button>
+                        <button class="tag_1">Crochet</button>
                         <button class="tag_2">Pâques</button>
                     </div>
                     <div class="fb">
