--- a/evenements.html
+++ b/evenements.html
@@ -66,7 +66,7 @@
           Calendrier de l'avent, guirlandes, cette année encore nous regorgeons d'inspiration
           pour faire de Noël une fête à chaque fois renouvelée.</p>
         <div class="boutons">
-          <button>places restantes : 6</button>
+          <button class="uniq_btn">places restantes : 6</button>
           <a href="planning.html#form" class="int_link">Inscription</a>
         </div>
       </div>
