liens sur planning mobile

--- a/planning.html
+++ b/planning.html
@@ -204,10 +204,10 @@
             </div>
             <div class="vm_aside_top">
                 <div class="vm_last_event">
-                    <p>Evénements à venir</p><button>Noël</button>
+                    <p>Evénements à venir</p><a href="evenements.html#event_noel"  class="int_link_mob">Noël</a>
                 </div>
                 <div class="vm_next_event">
-                    <p>Evénements passés</p><button>Halloween</button>
+                    <p>Evénements passés</p><a href="evenements.html#event_hallwn"  class="int_link_mob">Halloween</a>
                 </div>
 
             </div>
