--- a/realisations.html
+++ b/realisations.html
@@ -157,8 +157,8 @@
                 <h2 class="titre_card">Les gants</h2>
                 <div class="container">
                     <a href="le_lapin.html"><div>
-                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet"></a>
-                    </div>
+                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet">
+                    </div></a>
                     <div class="description">
                         Lorem ipsum, dolor sit  elit. Libero, eius necessitatibus earum
                         repudiandae adipisci ratione.
@@ -188,8 +188,8 @@
                 <h2 class="titre_card">Robe de printemps</h2>
                 <div class="container">
                     <a href="archives-Paques.html"><div>
-                        <img class="fond_img" src="imgs/fond_tricot.jpg" alt="photo de tricot"></a>
-                    </div>
+                        <img class="fond_img" src="imgs/fond_tricot.jpg" alt="photo de tricot">
+                    </div></a>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, adipisci ratione.
                     </div>
@@ -218,8 +218,8 @@
                 <h2 class="titre_card">Encore du crochet</h2>
                 <div class="container">
                     <a href="le_lapin.html"><div>
-                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet"></a>
-                    </div>
+                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet">
+                    </div></a>
                     <div class="description">
                         Lorem ipsum, dolor elit. Libero, eius necessitatibus earum
                         repudiandae adipisci ratione.
@@ -249,8 +249,8 @@
                 <h2 class="titre_card">Modèle de Couture 1</h2>
                 <div class="container">
                     <a href="archives-Paques.html"><div>
-                        <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël"></a>
-                    </div>
+                        <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël">
+                    </div></a>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur earum
                         repudiandae adipisci ratione.
@@ -280,8 +280,8 @@
                 <h2 class="titre_card">Encore du tricot</h2>
                 <div class="container">
                     <a href="le_lapin.html"><div>
-                        <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="lapin tricoté"></a>
-                    </div>
+                        <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="lapin tricoté">
+                    </div></a>
                     <div class="description">
                         Lorem ipsum, dolor sit necessitatibus earum
                         repudiandae adipisci ratione.
@@ -312,8 +312,8 @@
                 <h2 class="titre_card">Modèle de Couture 2</h2>
                 <div class="container">
                     <a href="archives-Paques.html"><div>
-                        <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël"></a>
-                    </div>
+                        <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël">
+                    </div></a>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, ratione.
                     </div>
