correction sur label

--- a/planning.html
+++ b/planning.html
@@ -139,7 +139,7 @@
                     </div>
                     <br>
 
-                    <div class="form_ln"> <label for="Prenom">Prénom : </label><input name="prenom" id="prenom" type="text">
+                    <div class="form_ln"><label for="prenom">Prénom : </label><input name="prenom" id="prenom" type="text">
                     </div>
                     <br>
 
@@ -164,7 +164,7 @@
                 </div>
                 <div class="ar2">
                     <h2 class="aside_title">Nos événements passés</h2>
-                    <a href="evenements.html#event_hallwn"class="event_last">Costumes d'Halloween</a>
+                    <a href="evenements.html#event_hallwn" class="event_last">Costumes d'Halloween</a>
                 </div>
             </div>
             <!------------------Version mobile-------------------------------------->
