correction titre formulaire

--- a/planning.html
+++ b/planning.html
@@ -133,7 +133,7 @@
 
             <div class="form" id="form">
                 <form action="#">
-                    <Legend>Formulaire d'inscription</Legend>
+                    <h2 class="aside_title">Formulaire d'inscription</h2>
 
                     <div class="form_ln" ><label for="nom">Nom : </label><input name="nom" id="nom" type="text">
                     </div>
