--- a/le_lapin.html
+++ b/le_lapin.html
@@ -119,7 +119,7 @@
         </div>
         <!----------------------- Carusel  end ---------------------------->
 
-        <!------------------------ Second section---------------- -->
+        <!------------------------ Second section------------------>
 
         <section class="second_section">
             <h2 class="title3">Réalisations de nos membres</h2>
