--- a/archives-Paques.html
+++ b/archives-Paques.html
@@ -8,6 +8,7 @@
     <title>Archives-Pâques</title>
     <link rel="stylesheet" href="style_origin.css">
     <link rel="stylesheet" href="Archives-Paques.css">
+    
 </head>
 
 <body>
@@ -64,9 +65,9 @@
             <h2 class="title2">Pâques, le tutoriel</h2>
 
             <div class="first_sec_1">
-                <img class="img1" src="imgs/tuto crochet 1.png" alt="">
-                <img class="img2" src="imgs/tuto crochet 2.png" alt="">
-                <img class="img3" src="imgs/tuto crochet 3.png" alt="">
+                <img class="img1" src="imgs/tuto_crochet1.png" alt="">
+                <img class="img2" src="imgs/tuto_crochet2.png" alt="">
+                <img class="img3" src="imgs/tuto_crochet3.png" alt="">
                 <p class="s1_text1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                     Ipsum is
                     simply dummy
@@ -75,8 +76,8 @@
                     typesetting
                     industry. </p>
             </div>
-            <div class="first_sec_2"><img class="img4" src="imgs/tuto crochet 4.png" alt="">
-                <img class="img5" src="imgs/tuto crochet 5.png" alt="">
+            <div class="first_sec_2"><img class="img4" src="imgs/tuto_crochet4.png" alt="">
+                <img class="img5" src="imgs/tuto_crochet5.png" alt="">
                 <p class="s1_text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolore possimus
                     aliquid
                     ex asperiores modi
@@ -99,7 +100,7 @@
 
                 <label class="prev" for="item5"><img src="imgs/skip-track.png" alt=""></label>
                 <div class="block_img">
-                    <img src="imgs/tuto crochet 1.png" alt="">
+                    <img src="imgs/tuto_crochet1.png" alt="">
                 </div>
                 <div class="indicator_card">
                     <label for="item1"></label>
@@ -117,7 +118,7 @@
 
                 <label class="prev" for="item1"><img src="imgs/skip-track.png" alt=""></label>
                 <div class="block_img">
-                    <img src="imgs/tuto crochet 2.png" alt="">
+                    <img src="imgs/tuto_crochet2.png" alt="">
                 </div>
 
                 <div class="indicator_card">
@@ -137,7 +138,7 @@
 
                 <label class="prev" for="item2"><img src="imgs/skip-track.png" alt=""></label>
                 <div class="block_img">
-                    <img src="imgs/tuto crochet 3.png" alt="">
+                    <img src="imgs/tuto_crochet3.png" alt="">
                 </div>
 
                 <div class="indicator_card">
@@ -156,7 +157,7 @@
 
                 <label class="prev" for="item3"><img src="imgs/skip-track.png" alt=""></label>
                 <div class="block_img">
-                    <img src="imgs/tuto crochet 4.png" alt="">
+                    <img src="imgs/tuto_crochet4.png" alt="">
                 </div>
 
                 <div class="indicator_card">
@@ -175,7 +176,7 @@
 
                 <label class="prev" for="item4"><img src="imgs/skip-track.png" alt=""></label>
                 <div class="block_img">
-                    <img src="imgs/tuto crochet 5.png" alt="">
+                    <img src="imgs/tuto_crochet5.png" alt="">
                 </div>
 
                 <div class="indicator_card">
@@ -200,8 +201,8 @@
             <div class="sec2_carte" id="sec2_carte1">
 
                 <div class="mv_carte">
-                    <img class="mv_img_carte" src="imgs/lapin crochet.png" alt="">
-                    <img class="mv_profil" src="imgs/Ellipse 4.png" alt="">
+                    <img class="mv_img_carte" src="imgs/lapin_crochet.png" alt="">
+                    <img class="mv_profil" src="imgs/Ellipse4.png" alt="">
                 </div>
 
                 <div> 
@@ -217,8 +218,8 @@
             <div class="sec2_carte" id="sec2_carte2">
 
                 <div class="mv_carte">
-                    <img class="mv_img_carte" src="imgs/tete crochet.png" alt="">
-                    <img class="mv_profil" src="imgs/Ellipse 5.png" alt="">
+                    <img class="mv_img_carte" src="imgs/tete_crochet.png" alt="">
+                    <img class="mv_profil" src="imgs/Ellipse5.png" alt="">
                 </div>
 
                 <div>
